# metaudio

./: .gitignore  Cargo.toml
src/: aiffparse.rs  lib.rs
