[package]
name = "metaudio"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
hound = "3.4"
mp3-metadata = "0.3"
lewton = "0.10"
ogg = "0.8"
claxon = "0.4"
